--- a/dobe/src/main/res/layout/activity_main.xml
+++ b/dobe/src/main/res/layout/activity_main.xml
@@ -10,8 +10,9 @@
         android:id="@+id/gv"
         android:layout_width="match_parent"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="0dp"
+        android:listSelector="@null"
         android:numColumns="3"
         android:gravity="center_horizontal"
         android:layout_height="match_parent">
