--- a/dobe/src/main/res/values/styles.xml
+++ b/dobe/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="Transparent">
+    <style name="Transparent" parent="@android:style/Theme.Holo.Light">
     　　<item name="android:windowBackground">@color/transparent</item>
     　　<item name="android:windowIsTranslucent">true</item>
         <item name="android:windowFrame">@null</item>
